resources/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: test-ss
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    ports:
    - containerPort: 80
