resources/val-2.yaml
apiVersion: admissionregistration.k8s.io/v1 
kind: ValidatingAdmissionPolicy
metadata:
  name: "pod-validation"
spec: 
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
        - 
      apiVersions:
        - v1
      operations:  
        - CREATE
        - UPDATE
      resources: 
        - pods
  validations:
    - expression: "object.metadata.name != 'test-ss'"
      message: "Don't use that name"


---

apiVersion: admissionregistration.k8s.io/v1 
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "pod-validation-binding"
spec: 
  policyName: "pod-validation"
  validationActions: ["Deny"]
